--- a/views/Product/Products.ejs
+++ b/views/Product/Products.ejs
@@ -78,7 +78,7 @@
                         <div class="bestSellingProduct">
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/vy1xa7zovcu22smzapzv.png">
                             <p class="bestSellingProductType">Bakery</p>
-                            <p class="bestSellingProductName">Brown Bread 400g</p>
+                            <p class="bestSellingProductName">Brown Bread</p>
                             <div class="reviewBox">
                                 <%for(let i=0; i<4; i++) {%>
                                     <span> <i class="fa-solid fa-star fa-sm" style="color: #4fbf8b;"></i> </span>
@@ -97,6 +97,7 @@
                                 </div>
                             </div>
                         </div>
+                        
 
                         <div class="bestSellingProduct">
                             <img src="https://raw.githubusercontent.com/avinashdm/gs-images/main/greencart/cxrrgnf12xuhkr4dyhi2.png">
