--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -57,6 +57,20 @@
         border: none;
     }
 
+    /* Media Queries */
+    @media(max-width: 600px){
+        .footerContent{
+            flex-direction: column-reverse;
+            align-items: center;;
+        }
+        .footerTextBox1{
+            width: 70%;
+        }
+        .logoName, .footerTextBox1 p{
+            text-align: center;
+        }
+    }
+
 </style>
 <body>
     <footer>
