Add responsiveness in footer

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -69,6 +69,12 @@
         .logoName, .footerTextBox1 p{
             text-align: center;
         }
+        .linksBox1{
+            margin-left: 1vw;
+        }
+        /* footer{
+            padding: 1vw;
+        } */
     }
 
 </style>
