--- a/views/Product/allProducts.ejs
+++ b/views/Product/allProducts.ejs
@@ -21,7 +21,7 @@
         <div class="showProductsBox">
                 <% for(let product of products) { %>
                 <a href='/product/<%= product.productId %>'>
-                <div class="bestSellingProduct">
+                <div class="bestSellingProduct allProduct">
                             <img src="<%=product.productImage1%>">
                             <p class="bestSellingProductType"><%=product.productCategory%></p>
                             <p class="bestSellingProductName"><%=product.productName%></p>
