--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -64,7 +64,7 @@
             align-items: center;;
         }
         .footerTextBox1{
-            width: 70%;
+            width: 90%;
         }
         .logoName, .footerTextBox1 p{
             text-align: center;
@@ -72,9 +72,23 @@
         .linksBox1{
             margin-left: 1vw;
         }
-        /* footer{
-            padding: 1vw;
-        } */
+        .linksBoxHeading{
+            font-size: 3.2vw;
+            margin: 1vw  0 1vw 0;
+        }
+        .linksBox a{
+            font-size: 2.8vw;
+        }
+        .logoName{
+            font-size: 4vw;
+        }
+        .footerDescription{
+            font-size: 3.2vw;
+        }
+        .copyRightText p{
+            font-size: 3.2vw;
+        }
+        
     }
 
 </style>
@@ -89,7 +103,7 @@
             <p class="logoName"><span class="logoNameFirstLetter">G</span>rocify</p>
             </div>
 
-            <p>
+            <p class="footerDescription">
                 We deliver fresh groceries and snacks straight to your door. Trusted by thousands, we aim to make your shopping experience simple and affordable.
             </p>
             </div>
