--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -235,6 +235,7 @@
             .navLinks-searchBar{
                 width: 75%;
             }
+
         }
 
         @media (min-width: 870px) and (max-width: 970px){
@@ -264,6 +265,10 @@
                 width: auto;
             }
             .loginBtn, .navLinks, .navCart, .navSearch{
+                display: none;
+            }
+
+            .navLoginDetails{
                 display: none;
             }
 
