--- a/views/Users/login.ejs
+++ b/views/Users/login.ejs
@@ -106,6 +106,15 @@
             display: inline;
         }
 
+        @media (max-width: 450px){
+            .loginInnerBox{
+                width: 70%;
+            }
+            .loginInnerBox h2{
+                font-size: 5.5vw;
+            }
+        }
+
     </style>
 </head>
 <body>
