--- a/views/includes/sellerHeader.ejs
+++ b/views/includes/sellerHeader.ejs
@@ -8,7 +8,6 @@
         .navbarHeader{
             height: 30px;
             padding: 1vw 3vw;
-            /* background-color: orange; */
             border-bottom: 1px solid rgb(197, 197, 197);
             font-family: "Varela Round", sans-serif;
             display: flex;
@@ -51,6 +50,23 @@
             border-radius: 14px;
         }
 
+
+        @media (max-width: 500px){
+            .logoName span{
+                font-size: 5.5vw;
+            }
+            .logoName{
+                font-size: 4.5vw;
+            }
+            .navLinks p{
+                font-size: 4vw;
+            }
+            .logoutBtn{
+                width: auto;
+                font-size: 3.3vw;
+                border-radius: 2vw;
+            }
+        }
         
 
 
