--- a/views/Seller/sellerLogin.ejs
+++ b/views/Seller/sellerLogin.ejs
@@ -106,6 +106,16 @@
             display: inline;
         }
 
+         @media (max-width: 450px){
+            .loginInnerBox{
+                width: 70%;
+            }
+            .loginInnerBox h2{
+                font-size: 5.5vw;
+            }
+        }
+
+
     </style>
 </head>
 <body>
