--- a/views/Users/signup.ejs
+++ b/views/Users/signup.ejs
@@ -94,10 +94,16 @@
             border: none;
             font-size: 14px;
         }
-/* 
-        .signupTitle, .signupForm{
-            display: none;
-        } */
+
+         @media (max-width: 450px){
+            .signupInnerBox{
+                width: 70%;
+            }
+            .signupInnerBox h2{
+                font-size: 5.5vw;
+            }
+        }
+
 
     </style>
 </head>
